# EyeForge

./: .gitignore  CHANGELOG.md  CHANGELOG_EN.md  README.md  README_EN.md  build_installer.py  config.json  install.bat  main.py  requirements.txt  setup_stub.cs  start.bat
docs/: v2-roadmap.md  wake-word-training-guide.md  唤醒词训练教程.md
src/: version.py
src-rs/: Cargo.toml  build.rs
src-rs/src/: ai_groups.rs  app.rs  channels.rs  commands.rs  config.rs  crypto.rs  hapi.rs  llm.rs  main.rs  model_manager.rs  runtime.rs  server.rs  skills.rs  theme.rs  tray.rs  voice.rs  wakeword.rs  wechat.rs
src/ai/: llm_client.py  prompts.py
src/channels/: wechat.py  wechat_backend.py
src/core/: actions.py  agent.py  screen.py  skills.py  vision.py
src/ui/: float_window.py  main_window.py  overlay.py  settings_dialog.py  wizard.py
src/utils/: crypto.py  hotkey.py  multimodal.py  updater.py  voice.py  wakeword.py  websocket_server.py
web-ui/: app.js  index.html  styles.css
