[package]
name = "eye-forge-rs"
version = "1.5.0-beta.2"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
log = "0.4"
simple_logger = "5"
base64 = "0.22"
fernet = { version = "0.2", default-features = false, features = ["rustcrypto"] }
pbkdf2 = "0.12"
sha2 = "0.10"
futures-util = "0.3"
tokio-tungstenite = "0.24"
axum = { version = "0.7", features = ["ws"] }
enigo = "0.6.1"
xcap = "0.9.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
cpal = "0.17.3"
hound = "3.5.1"
tray-icon = { version = "0.24.0", default-features = false }
rustpotter = "3.0.2"
half = "=2.3.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
